log/build_2024-01-05_23-57-10/camera_subscriber/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/borowa/ros2_ws/install/camera_subscriber/lib/python3.10/site-packages/camera_subscriber/publisher.py", line 35
    if self.x_y[1] > self.window_size[1]
                                        ^
SyntaxError: expected ':'

